# advent_of_code_2025

./: .gitignore  Cargo.toml
src/: main.rs
src/eight_day/: mod.rs  tests.rs
src/eleventh_day/: mod.rs  tests.rs
src/fifth_day/: mod.rs  tests.rs
src/first_day/: mod.rs  tests.rs
src/fourth_day/: mod.rs  tests.rs
src/ninth_day/: mod.rs  tests.rs
src/second_day/: mod.rs  tests.rs
src/seventh_day/: mod.rs  tests.rs
src/sixth_day/: mod.rs  tests.rs
src/tenth_day/: ida_star.rs  mod.rs  tests.rs
src/third_day/: mod.rs  tests.rs
