[package]
name = "advent_of_code_2025"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dpc-pariter = "0.5.1"
enum-display = "0.2.1"
good_lp = "1.14.2"
inquire = "0.9.1"
inquire-derive = "0.9.1"
itertools = "0.14.0"
regex = "1.12.2"
thiserror = "2.0.17"

[dev-dependencies]
test-case = "3.3.1"
